...
enum AspectRatioOverride {
  defaultAuto('Default', null),
  r1x1('1:1', 1.0),
  r4x3('4:3', 4.0 / 3.0),
  r16x9('16:9', 16.0 / 9.0),
  r16x10('16:10', 16.0 / 10.0),
  r21x9('21:9 (2.33:1)', 21.0 / 9.0),
  r64x27('64:27 (2.37:1)', 64.0 / 27.0),
  r221('2.21:1', 2.21),
  r235('2.35:1', 2.35),
  r239('2.39:1', 2.39),
  r5x4('5:4', 5.0 / 4.0),
  custom('Custom', null);
...
